Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -267,3 +267,4 @@ Temporary commit content 3024
 Temporary commit content 3027
 Temporary commit content 3029
 Temporary commit content 3030
+Temporary commit content 3048
