Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -219,3 +219,4 @@ Temporary commit content 2442
 Temporary commit content 2452
 Temporary commit content 2478
 Temporary commit content 2481
+Temporary commit content 2512
