Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -118,3 +118,4 @@ Temporary commit content 1400
 Temporary commit content 1405
 Temporary commit content 1406
 Temporary commit content 1426
+Temporary commit content 1469
