Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -339,3 +339,4 @@ Temporary commit content 3858
 Temporary commit content 3874
 Temporary commit content 3897
 Temporary commit content 3911
+Temporary commit content 3914
