Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -116,3 +116,4 @@ Temporary commit content 1298
 Temporary commit content 1302
 Temporary commit content 1308
 Temporary commit content 1322
+Temporary commit content 1334
