Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -243,3 +243,4 @@ Temporary commit content 2734
 Temporary commit content 2745
 Temporary commit content 2749
 Temporary commit content 2761
+Temporary commit content 2766
