--- a/edt/config.json
+++ b/edt/config.json
@@ -388,3 +388,4 @@ Temporary commit content 4452
 Temporary commit content 4459
 Temporary commit content 4461
 Temporary commit content 4468
+Temporary commit content 4470
