--- a/edt/config.json
+++ b/edt/config.json
@@ -88,3 +88,4 @@ Temporary commit content 1029
 Temporary commit content 1046
 Temporary commit content 1053
 Temporary commit content 1054
+Temporary commit content 1065
