Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -206,3 +206,4 @@ Temporary commit content 2275
 Temporary commit content 2282
 Temporary commit content 2289
 Temporary commit content 2308
+Temporary commit content 2360
