Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -353,3 +353,4 @@ Temporary commit content 4026
 Temporary commit content 4031
 Temporary commit content 4035
 Temporary commit content 4061
+Temporary commit content 4079
