Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -56,3 +56,4 @@ Temporary commit content 709
 Temporary commit content 710
 Temporary commit content 715
 Temporary commit content 724
+Temporary commit content 743
