--- a/edt/config.json
+++ b/edt/config.json
@@ -152,3 +152,4 @@ Temporary commit content 1681
 Temporary commit content 1685
 Temporary commit content 1690
 Temporary commit content 1703
+Temporary commit content 1727
