--- a/edt/config.json
+++ b/edt/config.json
@@ -98,3 +98,4 @@ Temporary commit content 1113
 Temporary commit content 1125
 Temporary commit content 1131
 Temporary commit content 1142
+Temporary commit content 1188
