Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -48,3 +48,4 @@ Temporary commit content 548
 Temporary commit content 575
 Temporary commit content 579
 Temporary commit content 587
+Temporary commit content 592
