Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -403,3 +403,4 @@ Temporary commit content 4624
 Temporary commit content 4626
 Temporary commit content 4632
 Temporary commit content 4659
+Temporary commit content 4661
