Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -398,3 +398,4 @@ Temporary commit content 4579
 Temporary commit content 4580
 Temporary commit content 4596
 Temporary commit content 4604
+Temporary commit content 4620
