Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -170,3 +170,4 @@ Temporary commit content 1916
 Temporary commit content 1920
 Temporary commit content 1928
 Temporary commit content 1956
+Temporary commit content 1966
