--- a/edt/config.json
+++ b/edt/config.json
@@ -4,3 +4,4 @@ Temporary commit content 22
 Temporary commit content 29
 Temporary commit content 37
 Temporary commit content 43
+Temporary commit content 60
