Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -141,3 +141,4 @@ Temporary commit content 1600
 Temporary commit content 1604
 Temporary commit content 1612
 Temporary commit content 1615
+Temporary commit content 1624
