Fixed bug in data processing script

--- a/edt/config.json
+++ b/edt/config.json
@@ -189,3 +189,4 @@ Temporary commit content 2110
 Temporary commit content 2116
 Temporary commit content 2127
 Temporary commit content 2130
+Temporary commit content 2153
