Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -340,3 +340,4 @@ Temporary commit content 3870
 Temporary commit content 3876
 Temporary commit content 3882
 Temporary commit content 3888
+Temporary commit content 3890
