Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -375,3 +375,4 @@ Temporary commit content 4246
 Temporary commit content 4248
 Temporary commit content 4260
 Temporary commit content 4263
+Temporary commit content 4274
