--- a/edt/config.json
+++ b/edt/config.json
@@ -104,3 +104,4 @@ Temporary commit content 1206
 Temporary commit content 1214
 Temporary commit content 1215
 Temporary commit content 1221
+Temporary commit content 1237
