Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -224,3 +224,4 @@ Temporary commit content 2680
 Temporary commit content 2682
 Temporary commit content 2692
 Temporary commit content 2696
+Temporary commit content 2710
