Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -331,3 +331,4 @@ Temporary commit content 3796
 Temporary commit content 3797
 Temporary commit content 3801
 Temporary commit content 3806
+Temporary commit content 3811
