Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -241,3 +241,4 @@ Temporary commit content 2890
 Temporary commit content 2893
 Temporary commit content 2895
 Temporary commit content 2915
+Temporary commit content 2944
