Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -206,3 +206,4 @@ Temporary commit content 2479
 Temporary commit content 2487
 Temporary commit content 2494
 Temporary commit content 2501
+Temporary commit content 2514
