Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -363,3 +363,4 @@ Temporary commit content 4126
 Temporary commit content 4128
 Temporary commit content 4158
 Temporary commit content 4170
+Temporary commit content 4174
