Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -226,3 +226,4 @@ Temporary commit content 2692
 Temporary commit content 2696
 Temporary commit content 2710
 Temporary commit content 2717
+Temporary commit content 2746
