Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -400,3 +400,4 @@ Temporary commit content 4559
 Temporary commit content 4565
 Temporary commit content 4572
 Temporary commit content 4577
+Temporary commit content 4587
