--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -244,3 +244,4 @@ Temporary commit content 2915
 Temporary commit content 2944
 Temporary commit content 2949
 Temporary commit content 2952
+Temporary commit content 2966
