Fixed bug in data processing script

--- a/edt/config.json
+++ b/edt/config.json
@@ -307,3 +307,4 @@ Temporary commit content 3513
 Temporary commit content 3527
 Temporary commit content 3545
 Temporary commit content 3547
+Temporary commit content 3553
