--- a/edt/config.json
+++ b/edt/config.json
@@ -17,3 +17,4 @@ Temporary commit content 221
 Temporary commit content 228
 Temporary commit content 233
 Temporary commit content 235
+Temporary commit content 259
