Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -286,3 +286,4 @@ Temporary commit content 3344
 Temporary commit content 3349
 Temporary commit content 3354
 Temporary commit content 3355
+Temporary commit content 3356
