Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -149,3 +149,4 @@ Temporary commit content 1648
 Temporary commit content 1650
 Temporary commit content 1664
 Temporary commit content 1681
+Temporary commit content 1685
