Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -266,3 +266,4 @@ Temporary commit content 3015
 Temporary commit content 3024
 Temporary commit content 3027
 Temporary commit content 3029
+Temporary commit content 3030
