Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -107,3 +107,4 @@ Temporary commit content 1220
 Temporary commit content 1232
 Temporary commit content 1239
 Temporary commit content 1252
+Temporary commit content 1281
