--- a/edt/config.json
+++ b/edt/config.json
@@ -378,3 +378,4 @@ Temporary commit content 4305
 Temporary commit content 4338
 Temporary commit content 4348
 Temporary commit content 4354
+Temporary commit content 4367
