Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -304,3 +304,4 @@ Temporary commit content 3426
 Temporary commit content 3451
 Temporary commit content 3457
 Temporary commit content 3465
+Temporary commit content 3474
