--- a/edt/config.json
+++ b/edt/config.json
@@ -46,3 +46,4 @@ Temporary commit content 532
 Temporary commit content 542
 Temporary commit content 548
 Temporary commit content 575
+Temporary commit content 579
