Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -383,3 +383,4 @@ Temporary commit content 4369
 Temporary commit content 4385
 Temporary commit content 4406
 Temporary commit content 4436
+Temporary commit content 4440
