Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -253,3 +253,4 @@ Temporary commit content 2826
 Temporary commit content 2830
 Temporary commit content 2833
 Temporary commit content 2853
+Temporary commit content 2879
