Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -191,3 +191,4 @@ Temporary commit content 2127
 Temporary commit content 2130
 Temporary commit content 2153
 Temporary commit content 2156
+Temporary commit content 2157
