Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -60,3 +60,4 @@ Temporary commit content 743
 Temporary commit content 753
 Temporary commit content 774
 Temporary commit content 793
+Temporary commit content 800
