Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -156,3 +156,4 @@ Temporary commit content 1727
 Temporary commit content 1729
 Temporary commit content 1738
 Temporary commit content 1764
+Temporary commit content 1783
