Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -356,3 +356,4 @@ Temporary commit content 4061
 Temporary commit content 4079
 Temporary commit content 4088
 Temporary commit content 4101
+Temporary commit content 4110
