Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -59,3 +59,4 @@ Temporary commit content 724
 Temporary commit content 743
 Temporary commit content 753
 Temporary commit content 774
+Temporary commit content 793
