Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -423,3 +423,4 @@ Temporary commit content 4859
 Temporary commit content 4862
 Temporary commit content 4877
 Temporary commit content 4887
+Temporary commit content 4888
