Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -229,3 +229,4 @@ Temporary commit content 2717
 Temporary commit content 2746
 Temporary commit content 2753
 Temporary commit content 2760
+Temporary commit content 2796
