Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -120,3 +120,4 @@ Temporary commit content 1406
 Temporary commit content 1426
 Temporary commit content 1469
 Temporary commit content 1470
+Temporary commit content 1482
