Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -343,3 +343,4 @@ Temporary commit content 3914
 Temporary commit content 3949
 Temporary commit content 3955
 Temporary commit content 3960
+Temporary commit content 3966
