Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -305,3 +305,4 @@ Temporary commit content 3497
 Temporary commit content 3506
 Temporary commit content 3513
 Temporary commit content 3527
+Temporary commit content 3545
