--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -85,3 +85,4 @@ Temporary commit content 979
 Temporary commit content 1009
 Temporary commit content 1051
 Temporary commit content 1063
+Temporary commit content 1071
