Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -346,3 +346,4 @@ Temporary commit content 3908
 Temporary commit content 3910
 Temporary commit content 3915
 Temporary commit content 3925
+Temporary commit content 3944
