Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -62,3 +62,4 @@ Temporary commit content 774
 Temporary commit content 793
 Temporary commit content 800
 Temporary commit content 811
+Temporary commit content 821
