--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -260,3 +260,4 @@ Temporary commit content 3064
 Temporary commit content 3074
 Temporary commit content 3075
 Temporary commit content 3082
+Temporary commit content 3096
