Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -209,3 +209,4 @@ Temporary commit content 2308
 Temporary commit content 2360
 Temporary commit content 2373
 Temporary commit content 2379
+Temporary commit content 2393
