Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -309,3 +309,4 @@ Temporary commit content 3545
 Temporary commit content 3547
 Temporary commit content 3553
 Temporary commit content 3558
+Temporary commit content 3568
