Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -343,3 +343,4 @@ Temporary commit content 3888
 Temporary commit content 3890
 Temporary commit content 3895
 Temporary commit content 3908
+Temporary commit content 3910
