Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -203,3 +203,4 @@ Temporary commit content 2252
 Temporary commit content 2263
 Temporary commit content 2267
 Temporary commit content 2275
+Temporary commit content 2282
