--- a/edt/config.json
+++ b/edt/config.json
@@ -52,3 +52,4 @@ Temporary commit content 592
 Temporary commit content 594
 Temporary commit content 598
 Temporary commit content 601
+Temporary commit content 603
