Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -175,3 +175,4 @@ Temporary commit content 1974
 Temporary commit content 1984
 Temporary commit content 1985
 Temporary commit content 1991
+Temporary commit content 1995
