--- a/edt/config.json
+++ b/edt/config.json
@@ -364,3 +364,4 @@ Temporary commit content 4137
 Temporary commit content 4138
 Temporary commit content 4146
 Temporary commit content 4244
+Temporary commit content 4247
