Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -99,3 +99,4 @@ Temporary commit content 1172
 Temporary commit content 1187
 Temporary commit content 1189
 Temporary commit content 1203
+Temporary commit content 1212
