--- a/edt/config.json
+++ b/edt/config.json
@@ -234,3 +234,4 @@ Temporary commit content 2621
 Temporary commit content 2623
 Temporary commit content 2626
 Temporary commit content 2627
+Temporary commit content 2628
