--- a/edt/config.json
+++ b/edt/config.json
@@ -400,3 +400,4 @@ Temporary commit content 4596
 Temporary commit content 4604
 Temporary commit content 4620
 Temporary commit content 4624
+Temporary commit content 4626
