Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -84,3 +84,4 @@ Temporary commit content 961
 Temporary commit content 979
 Temporary commit content 1009
 Temporary commit content 1051
+Temporary commit content 1063
