Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -174,3 +174,4 @@ Temporary commit content 2137
 Temporary commit content 2152
 Temporary commit content 2158
 Temporary commit content 2179
+Temporary commit content 2213
