Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -432,3 +432,4 @@ Temporary commit content 4941
 Temporary commit content 4944
 Temporary commit content 4958
 Temporary commit content 4964
+Temporary commit content 4971
