Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -418,3 +418,4 @@ Temporary commit content 4752
 Temporary commit content 4768
 Temporary commit content 4771
 Temporary commit content 4772
+Temporary commit content 4776
