Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -111,3 +111,4 @@ Temporary commit content 1281
 Temporary commit content 1282
 Temporary commit content 1292
 Temporary commit content 1306
+Temporary commit content 1314
