Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -373,3 +373,4 @@ Temporary commit content 4276
 Temporary commit content 4281
 Temporary commit content 4292
 Temporary commit content 4297
+Temporary commit content 4301
