--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -23,3 +23,4 @@ Temporary commit content 303
 Temporary commit content 305
 Temporary commit content 306
 Temporary commit content 316
+Temporary commit content 347
