Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -411,3 +411,4 @@ Temporary commit content 4680
 Temporary commit content 4691
 Temporary commit content 4695
 Temporary commit content 4713
+Temporary commit content 4791
