Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -55,3 +55,4 @@ Temporary commit content 700
 Temporary commit content 709
 Temporary commit content 710
 Temporary commit content 715
+Temporary commit content 724
