Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -412,3 +412,4 @@ Temporary commit content 4690
 Temporary commit content 4701
 Temporary commit content 4727
 Temporary commit content 4730
+Temporary commit content 4742
