--- a/edt/config.json
+++ b/edt/config.json
@@ -136,3 +136,4 @@ Temporary commit content 1549
 Temporary commit content 1559
 Temporary commit content 1561
 Temporary commit content 1565
+Temporary commit content 1580
