Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -292,3 +292,4 @@ Temporary commit content 3318
 Temporary commit content 3327
 Temporary commit content 3340
 Temporary commit content 3343
+Temporary commit content 3350
