--- a/edt/config.json
+++ b/edt/config.json
@@ -208,3 +208,4 @@ Temporary commit content 2289
 Temporary commit content 2308
 Temporary commit content 2360
 Temporary commit content 2373
+Temporary commit content 2379
