Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -133,3 +133,4 @@ Temporary commit content 1646
 Temporary commit content 1649
 Temporary commit content 1652
 Temporary commit content 1671
+Temporary commit content 1691
