--- a/edt/config.json
+++ b/edt/config.json
@@ -67,3 +67,4 @@ Temporary commit content 762
 Temporary commit content 765
 Temporary commit content 779
 Temporary commit content 796
+Temporary commit content 824
