Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -179,3 +179,4 @@ Temporary commit content 1995
 Temporary commit content 1998
 Temporary commit content 2002
 Temporary commit content 2011
+Temporary commit content 2013
