Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -181,3 +181,4 @@ Temporary commit content 2237
 Temporary commit content 2256
 Temporary commit content 2258
 Temporary commit content 2274
+Temporary commit content 2276
