--- a/edt/config.json
+++ b/edt/config.json
@@ -27,3 +27,4 @@ Temporary commit content 345
 Temporary commit content 349
 Temporary commit content 358
 Temporary commit content 364
+Temporary commit content 370
