Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -290,3 +290,4 @@ Temporary commit content 3299
 Temporary commit content 3315
 Temporary commit content 3318
 Temporary commit content 3327
+Temporary commit content 3340
