Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -119,3 +119,4 @@ Temporary commit content 1405
 Temporary commit content 1406
 Temporary commit content 1426
 Temporary commit content 1469
+Temporary commit content 1470
