Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -47,3 +47,4 @@ Temporary commit content 625
 Temporary commit content 637
 Temporary commit content 650
 Temporary commit content 651
+Temporary commit content 654
