Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -166,3 +166,4 @@ Temporary commit content 2053
 Temporary commit content 2068
 Temporary commit content 2083
 Temporary commit content 2086
+Temporary commit content 2091
