Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -201,3 +201,4 @@ Temporary commit content 2191
 Temporary commit content 2231
 Temporary commit content 2252
 Temporary commit content 2263
+Temporary commit content 2267
