Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -247,3 +247,4 @@ Temporary commit content 2766
 Temporary commit content 2777
 Temporary commit content 2785
 Temporary commit content 2795
+Temporary commit content 2799
