Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -243,3 +243,4 @@ Temporary commit content 2895
 Temporary commit content 2915
 Temporary commit content 2944
 Temporary commit content 2949
+Temporary commit content 2952
