Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -150,3 +150,4 @@ Temporary commit content 1822
 Temporary commit content 1827
 Temporary commit content 1834
 Temporary commit content 1855
+Temporary commit content 1911
