Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -262,3 +262,4 @@ Temporary commit content 2975
 Temporary commit content 2984
 Temporary commit content 2999
 Temporary commit content 3009
+Temporary commit content 3015
