--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -81,3 +81,4 @@ Temporary commit content 944
 Temporary commit content 945
 Temporary commit content 949
 Temporary commit content 961
+Temporary commit content 979
