Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -268,3 +268,4 @@ Temporary commit content 3027
 Temporary commit content 3029
 Temporary commit content 3030
 Temporary commit content 3048
+Temporary commit content 3053
