Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -158,3 +158,4 @@ Temporary commit content 1738
 Temporary commit content 1764
 Temporary commit content 1783
 Temporary commit content 1796
+Temporary commit content 1797
