Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -54,3 +54,4 @@ Temporary commit content 598
 Temporary commit content 601
 Temporary commit content 603
 Temporary commit content 606
+Temporary commit content 663
