--- a/edt/config.json
+++ b/edt/config.json
@@ -411,3 +411,4 @@ Temporary commit content 4687
 Temporary commit content 4690
 Temporary commit content 4701
 Temporary commit content 4727
+Temporary commit content 4730
