Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -279,3 +279,4 @@ Temporary commit content 3243
 Temporary commit content 3245
 Temporary commit content 3256
 Temporary commit content 3259
+Temporary commit content 3263
