--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -246,3 +246,4 @@ Temporary commit content 2949
 Temporary commit content 2952
 Temporary commit content 2966
 Temporary commit content 2968
+Temporary commit content 2979
