--- a/edt/config.json
+++ b/edt/config.json
@@ -392,3 +392,4 @@ Temporary commit content 4470
 Temporary commit content 4497
 Temporary commit content 4515
 Temporary commit content 4538
+Temporary commit content 4545
