Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -306,3 +306,4 @@ Temporary commit content 3457
 Temporary commit content 3465
 Temporary commit content 3474
 Temporary commit content 3499
+Temporary commit content 3538
