Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -32,3 +32,4 @@ Temporary commit content 393
 Temporary commit content 432
 Temporary commit content 434
 Temporary commit content 435
+Temporary commit content 438
