--- a/edt/config.json
+++ b/edt/config.json
@@ -139,3 +139,4 @@ Temporary commit content 1565
 Temporary commit content 1580
 Temporary commit content 1600
 Temporary commit content 1604
+Temporary commit content 1612
