Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -62,3 +62,4 @@ Temporary commit content 718
 Temporary commit content 719
 Temporary commit content 727
 Temporary commit content 737
+Temporary commit content 746
