--- a/edt/config.json
+++ b/edt/config.json
@@ -63,3 +63,4 @@ Temporary commit content 719
 Temporary commit content 727
 Temporary commit content 737
 Temporary commit content 746
+Temporary commit content 762
