Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -195,3 +195,4 @@ Temporary commit content 2157
 Temporary commit content 2166
 Temporary commit content 2168
 Temporary commit content 2174
+Temporary commit content 2180
