Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -391,3 +391,4 @@ Temporary commit content 4468
 Temporary commit content 4470
 Temporary commit content 4497
 Temporary commit content 4515
+Temporary commit content 4538
