--- a/edt/config.json
+++ b/edt/config.json
@@ -407,3 +407,4 @@ Temporary commit content 4661
 Temporary commit content 4665
 Temporary commit content 4676
 Temporary commit content 4677
+Temporary commit content 4687
