Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -264,3 +264,4 @@ Temporary commit content 2999
 Temporary commit content 3009
 Temporary commit content 3015
 Temporary commit content 3024
+Temporary commit content 3027
