Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -77,3 +77,4 @@ Temporary commit content 891
 Temporary commit content 897
 Temporary commit content 928
 Temporary commit content 931
+Temporary commit content 933
