--- a/edt/config.json
+++ b/edt/config.json
@@ -165,3 +165,4 @@ Temporary commit content 1825
 Temporary commit content 1863
 Temporary commit content 1864
 Temporary commit content 1907
+Temporary commit content 1908
