Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -162,3 +162,4 @@ Temporary commit content 2010
 Temporary commit content 2012
 Temporary commit content 2032
 Temporary commit content 2034
+Temporary commit content 2053
