Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -321,3 +321,4 @@ Temporary commit content 3661
 Temporary commit content 3662
 Temporary commit content 3682
 Temporary commit content 3686
+Temporary commit content 3706
