--- a/edt/config.json
+++ b/edt/config.json
@@ -61,3 +61,4 @@ Temporary commit content 708
 Temporary commit content 718
 Temporary commit content 719
 Temporary commit content 727
+Temporary commit content 737
