Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -319,3 +319,4 @@ Temporary commit content 3652
 Temporary commit content 3675
 Temporary commit content 3679
 Temporary commit content 3683
+Temporary commit content 3688
