Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -431,3 +431,4 @@ Temporary commit content 4919
 Temporary commit content 4931
 Temporary commit content 4939
 Temporary commit content 4946
+Temporary commit content 4955
