Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -301,3 +301,4 @@ Temporary commit content 3395
 Temporary commit content 3400
 Temporary commit content 3422
 Temporary commit content 3426
+Temporary commit content 3451
