Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -28,3 +28,4 @@ Temporary commit content 349
 Temporary commit content 358
 Temporary commit content 364
 Temporary commit content 370
+Temporary commit content 396
