Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -288,3 +288,4 @@ Temporary commit content 3283
 Temporary commit content 3290
 Temporary commit content 3299
 Temporary commit content 3315
+Temporary commit content 3318
