Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -296,3 +296,4 @@ Temporary commit content 3447
 Temporary commit content 3448
 Temporary commit content 3450
 Temporary commit content 3459
+Temporary commit content 3460
