--- a/edt/config.json
+++ b/edt/config.json
@@ -164,3 +164,4 @@ Temporary commit content 1805
 Temporary commit content 1825
 Temporary commit content 1863
 Temporary commit content 1864
+Temporary commit content 1907
