Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -191,3 +191,4 @@ Temporary commit content 2318
 Temporary commit content 2331
 Temporary commit content 2345
 Temporary commit content 2364
+Temporary commit content 2368
