Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -318,3 +318,4 @@ Temporary commit content 3628
 Temporary commit content 3652
 Temporary commit content 3675
 Temporary commit content 3679
+Temporary commit content 3683
