Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -264,3 +264,4 @@ Temporary commit content 3096
 Temporary commit content 3103
 Temporary commit content 3105
 Temporary commit content 3110
+Temporary commit content 3112
