Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -223,3 +223,4 @@ Temporary commit content 2666
 Temporary commit content 2680
 Temporary commit content 2682
 Temporary commit content 2692
+Temporary commit content 2696
