Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -320,3 +320,4 @@ Temporary commit content 3675
 Temporary commit content 3679
 Temporary commit content 3683
 Temporary commit content 3688
+Temporary commit content 3719
