Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -371,3 +371,4 @@ Temporary commit content 4215
 Temporary commit content 4220
 Temporary commit content 4221
 Temporary commit content 4232
+Temporary commit content 4246
