Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -128,3 +128,4 @@ Temporary commit content 1505
 Temporary commit content 1510
 Temporary commit content 1518
 Temporary commit content 1532
+Temporary commit content 1534
