Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -281,3 +281,4 @@ Temporary commit content 3233
 Temporary commit content 3253
 Temporary commit content 3291
 Temporary commit content 3305
+Temporary commit content 3319
