--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -110,3 +110,4 @@ Temporary commit content 1252
 Temporary commit content 1281
 Temporary commit content 1282
 Temporary commit content 1292
+Temporary commit content 1306
