Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -249,3 +249,4 @@ Temporary commit content 2785
 Temporary commit content 2795
 Temporary commit content 2799
 Temporary commit content 2818
+Temporary commit content 2826
